--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
 	<meta name='viewport'
 		  content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
 	<meta http-equiv='X-UA-Compatible' content='ie=edge'>
+	<link href='styles/index.css' rel="stylesheet">
+
 	<title>CV Vlasov Kirill</title>
 </head>
+
 <body>
+<nav>
+
+</nav>
+
+<main>
+	<h1>hello people</h1>
+</main>
+
+<footer>
+
+</footer>
 
 </body>
+
+<script src='index.js'></script>
 </html>
